<resources>
    <string name="suprabathanam">ಶ್ರೀ ವೀರಭದ್ರೇಶ್ವರ ಸುಪ್ರಭಾತ \n\n
        ರುದ್ರಸ್ಯ ತನಯೋ ವೀರ ಶೂಲಾಸಕ್ತ ಮಹಾಕರಃ
        ಭದ್ರಂತ ನೋತುವೋ ಭದ್ರೋ ಹಿಮಕುಂದೇಂದು ಸನ್ನಿಭಃ || ಪ || \n

        ಉತ್ತಿಷ್ಠೋತ್ತಿಷ್ಠ ವೀರೇಶ ಉತ್ತಿಷ್ಠ ಕರುಣಾನಿಧೆ
        ಉತ್ತಿಷ್ಠ ಶಿವತೇಜಸ್ಯ ಉತ್ತಿಷ್ಠ ಭವನಾಶಕ |
        ಉತ್ತಿಷ್ಠ ಭದ್ರಕಾಳೀಶ ಉತ್ತಿಷ್ಠಾದಿ ವಿಮರ್ಧನ
        ಉತ್ತಿಷ್ಠ ಲೋಕ ರಕ್ಷಾರ್ಥ ತ್ರಿವಿಕ್ರಮ ನಮೋಸ್ತುತೇ || ೧ || \n

        ಪರಿಮಳವನೊತ್ತ ಮಂದಾನಿಲನಲ್ಲಿ ನಿಂದಿಹನು
        ಮೂಡಣದ ರವಿರಶ್ಮಿ ನಿಶೆಯ ಮೂಡುತ್ತಿರಲು |
        ಶುಕ ಪಿಕಾದಿ ಪಕ್ಷಿ ಸಂಕುಲವೆದ್ದು ಸಂಭ್ರಮದಿ
        ತವ ಸುಪ್ರಭಾತವ ಪಾಡುತಿಹವೇಳು ಶ್ರೀ ವೀರಭದ್ರ || ೨ || \n

        ಪರಮ ಪರತರ ಪರಂಜ್ಯೋತಿ ಪ್ರತಿಭಾನ್ವಿತನೆ
        ಇಳೆಯ ಭಕ್ತರ ವರಕಲ್ಪ ತರುವೆ |
        ಧರೆಯೊಳೆಲ್ಲೆಲ್ಲ ನಶಿಸಿರ್ಪ ಶಿವಧರ್ಮವಂ
        ಮರಳಿ ಚೇತನಗೊಳಿಸಲೇಳು ಶ್ರೀವೀರಭದ್ರ || ೩ ||\n

        ದುಷ್ಟ ಶಿಕ್ಷಕ ನೀನು ಶಿಷ್ಟಜನ ಪರಿಪಾಲಕನು
        ಧರ್ಮೋದ್ಧಾರ ಸತ್ಯ ಪ್ರಕಾಶಕ ತವಕೃತಿಯೂ |
        ಭವರೋಗ ವೈದ್ಯ ಚೈತನ್ಯ ರೂಪನೆ
        ಶಾಂತಿಧೂತನೇ ನೀನೇಳು ಸದ್ಗುರು ಶ್ರೀವೀರೇಶ || ೪ ||\n

        ಧರ್ಮ ಪ್ರವರ್ತಕನೆ ಪರತತ್ವ ಬೋಧಕನೆ
        ಶಿವಾದ್ವೈತ ಪ್ರಸಾರದಲ್ಲಿ ಶಿವನ ನೆಚ್ಚಿನ ದೂತ |
        ಆರ್ಯ ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿಯ ಭಾವೈಕ್ಯ ಸಾಧಕನೆ
        ಧರೆಯನ್ನುದ್ಧರಿಸಲೇಳಯ್ಯ ಶ್ರೀ ವೀರಭದ್ರ || ೫ ||\n

        ಅಂಗದೋಳು ಲಿಂಗಮಂ ಭಸಿತ ರುದ್ರಾಕ್ಷಿ ಮಾಲೆಗಳಂ
        ಕಟೆಯೊಳು ನೃಸಿಂಹಾದಿಗಳ ರುಂಡ ಮಾಲೆಗಳಂ |
        ಹಸ್ತದೊಳು ವೀರ ಖಡ್ಗಮಂ ಫಾಲದೊಳಗ್ನಿ
        ನೇತ್ರಮಂ ಧರಿಸಿರ್ಪ ಶಿವರೂಪಿನಿ ಬೇಗೇಳು ಶ್ರೀ ವೀರಭದ್ರೇಶ || ೬ ||\n

        ಸಕಲವರ ಮುನಿಸ್ತೋಮ ದೇವ
        ದೈತ್ಯ ಸಂತತಿಯ ಭುವಿಯ ಭಕ್ತ ಜನರ ಸಮುದಾಯ |
        ಹಗಲಿರುಳು ನಿನ್ನ ನಿಷ್ಠೆಯಿಂದಾರಾಧಿಸುತಿಹುದು
        ತಪದರುಶನವ ನೀಡಿ ಸಲುಹಲೇಳು ಶ್ರೀವೀರಭದ್ರ || ೭ ||\n

        ಭಕ್ತಜನ ಕೋಟಿ ನಿನಗಾಗಿ ಭವ್ಯದೇಗುಲಗಳ ನಿರ್ಮಿಸಿ
        ಸತತ ನಿನ್ನ ಲೀಲಾವಳಿಗಳಂ ನಿಷ್ಠೆಯಿಂದಾಲಿಸುತ |
        ಭಕ್ತ ಪರಪರತೆಯಿಂ ಮೈಮರೆತು ನಿಂದಿಹುದು
        ಕೃಪೆಗೈದು ಸಲಹಲೇಳು ಶ್ರೀ ವೀರಭದ್ರ || ೮ ||\n

        ಶಿವನ ಪಂಚ ಮುಖೋದ್ಭವ ಶ್ರೀಪಂಚಾಚಾರ್ಯರು
        ನಂದಿ ಸ್ಕಂದ ಭೃಂಗಿ ಇಂದ್ರ ಯಮ-ದಧೀಚಿ-ಗೌತಮ |
        ದೂರ್ವಾಸ – ವಶಿಷ್ಟ ಮೊದಲಪ್ಪ ಭಕ್ತ ಸಮುದಾಯ
        ತವದರುಶನವ ಬಯಿಸಿ ಬಂದಿಹುದೇಳಯ್ಯಾ ಶ್ರೀವೀರಭದ್ರ || ೯ ||\n

        ನೀ ವೀರಶ್ರೀಯಾಗಿ ವಿಶ್ವಕ್ಕೆ ಗುರುವಾಗಿ
        ಸತ್ಯ ಸಂಕಲ್ಪನಾಗಿ ಭಕ್ತ ವತ್ಸಲನಾಗಿ ಶಿವನ |
        ನೆಚ್ಚಿನ ಕಡುಗಲಿಯಾಗಿ ವೀರ ಮಣಿಯಾಗಿ
        ಜಗವಶೂರ್ಯರದಿಂ ಸಲುಹಲೇಳು ಶ್ರೀ ವೀರಭದ್ರ || ೧೦ ||\n

        ಮಾಯಾ ಪರವಶತೆಯಿಂ ಇಂದ್ರಿಯಗಳಿಗೆ ಆಳಾಗಿ
        ಕ್ಷಣಿಕವಹಕಾಯ ಸುಖಂಗಳಲಿ ಮೈ ಮರೆತು |
        ಜನನ ಮರಣಗಳಿಗೆ ತುತ್ತಾಗಿ ಬಳಲು ತೀರ್ಪ
        ಭಕ್ತರಂ ಕರುಣೆಯಿಂ ಸಲುಹಲೇಳು ಶ್ರೀ ವೀರಭದ್ರ || ೧೧ ||\n

        ವೀರಾಧಿವೀರನೆ ವೀರ ಮಾಹೇಶ್ವರನೇ
        ಆದಿಶೈವ ಸಿದ್ಧಾಂತ ಪ್ರತಿ ಪಾದಕನೆ |
        ನಂಬಿರ್ಪ ಮುನಿಜನಂಗಳಿಗೆ ಅಭಯ ಪ್ರಾದಾತಾನೆ
        ಧರೆಯ ಪಾವನಗೊಳಿಸಲೇಳಯ್ಯ ಶ್ರೀವೀರಭದ್ರ || ೧೨ ||\n

        ಶಿವದ್ರೋಹಿ ದಕ್ಷನಾಚರಿಸಿದ ಧ್ವರಕೆ ಕರೆಯದಲೇ
        ಸತಿಪೋಗೆ ಗರ್ವದಿ ಶಿವನಿಂದೆ ಗೈದ ದಕ್ಷನಂಶಪಿಸಿ |
        ಸತಿಯಗ್ನಿಯೋಳ ತನುವಿಗೆ ಶಿವನ ಫಲನೇತ್ರದಿಂ
        ದವತರಿಸಿದಾ ಶಿವನ ಮಾನಸ ಪುತ್ರ ತವ ಸುಪ್ರಭಾತಂ || ೧೩ ||\n

        ಶಿವತೇಜೋ ವಿಲಾಸದಿಂ ರುದ್ರಗಣರು ಸೃಜಿಸಿ
        ಹರನಾಣತಿಯಂತೆ ಭದ್ರಕಾಳಿಯ ಕೈ ಹಿಡಿದು |
        ಗಣ ಸೇನೆಯೋಡನೆ ದಕ್ಷನ ದ್ವಾರವ ಮುತ್ತಿದಾ
        ಕಡುಗಲಿ ಶ್ರೀ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೧೪ ||\n

        ದಕ್ಷ ನಿನ್ನಂ ತೆಗಳಿ ಶಿವನಿಂದೆಗೈಯಲಾಕ್ಷಣದಿಂ
        ಸಿಡಿಲಿನಾರ್ಭಟ ದೊಳನಲ್ಲಿರ್ಧ ಹರಿ ವಿಧೇಂದ್ರಂ |
        ನಿಗ್ರಹಿಸಿ ಶಿವದ್ರೋಹಿ ದಕ್ಷನ ಶಿರವ ತೆಗೆದು
        ಯೋಗಾಗ್ನಿಗಾಹುತಿಯಿತ್ತಾ ಕಡುಗಲಿ ವೀರೇಶ ತವಸುಪ್ರಭಾತಂ || ೧೫ ||\n

        ಶರಣಾದವರೆಲ್ಲರಂ ಮನ್ನಿಸುತ ಪೊರೆದು
        ದಕ್ಷನಿಗೆ ಕುರಿತಲೆಯಿಟ್ಟು ಸಲುಹಲ್ ಮೊಳಗ್ದ |
        ವಿಜಯೋದ್ದಾರ ಪುಷ್ವವೃಷ್ಠಿ ವೇದ ಘೋಷಾಗಳಿಂ ಮುದವಾಂತ
        ಶಾಂತಮೂರ್ತಿ ಶ್ರೀ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೧೬ ||\n

        ಹರಿ ನರಸಿಂಹ ಮೌರದಿಂ ಹಿರಣ್ಯಕಶ್ಯಪನ ಕೊಂದು
        ಲೋಕಂಗಳು ಪೀಡಿಸುತಿರೆ ಶೂಲಪಾಣಿಯ ಆಜ್ಞೆಯಂತೆ |
        ಶರಭಾವತಾರದಿಂ ನರಹರಿಯ ಶಿರತೆಗೆದು ಲೋಕಂಗಳಂ
        ಪೊರೆದ ಕರುಣಾಳು ಕಲಿ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೧೭ ||\n

        ರುದ್ರಾಂಶ ಪವನಸುತ ಹೇಮಕೂಟಾದ್ರಿಯೊಳು ಗೈದ
        ವರ ತಪಕೊಲಿದು ನೀ ಮೈದೋರಿ ಗುರುರೂಪದಿಂ |
        ಶಿವಾದ್ವೈತದುಪದೇಶ ಪೂರ್ವಕವಾಗಿ ಶಿವ
        ದೀಕ್ಷೆಯಂ ಕರುಣಿಸಿದಾ ಗುರು ವೀರೇಶ ತವ ಸುಪಭಾತಂ || ೧೮ ||\n

        ಮಾರುತಿಯ ಲಿಂಗ ಶಿವಮಾಯಿಯಿಂದ ನಿರ್ಗಮಿಸಲು
        ವಿಧಿ ನಿಯಮದಂತೆ ಅಸುನೀಗಲೆಗಳ ಮಾರುತಿಗೆ |
        ಮೈದೋರಿ ಲಿಂಗ ರೊಂಮಾಂಗ ನಂದನಿಸಿ
        ಗುರುವೀರ ಮೂರುತಿಯ ಪೊರೆವ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೧೯ ||\n

        ವರಬಲದಿ ಗರ್ಜಿಸಿ ಲೋಕಂಗಳಂ
        ಪೀಡಿಸುತ್ತಿರ್ದ ಕದಂಬಾಸುರ ನಂದೇವರ್ಕಳ |
        ಪ್ರಾರ್ಥನೆಯಂತೆ ನೀ ಘೋರ ರೂಪವಂ ಧರಿಸಿ
        ಭವನಂಗಳಂ ಸಲಹಿದಾ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೨೦ ||\n

        ಪಾರಿ ಚಾತಾದ್ರಿಯಲಿ ಯೋಗ ಸಮಾಧಿಯೊಳಿದ್ದ
        ನಿನ್ನ ದರುಶನಕ್ಕೆ ಬರುತಿರ್ದ ಜಮದಗ್ನಿ ದಧೀಚಿಗಳಂ |
        ಜ್ವಾಲಾವ್ಯಾಳಾಸುರ ಭಕ್ತಿಸಲವರ ಮೊರೆ ಕೇಳ್ದು
        ಅಸುರನಂ ಮರ್ದಿಸಿ ಮುನಿಗಳಂ ಸಲುಹಿದಾ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೨೧ ||\n

        ಶಿವದರ್ಶನಕ್ಕಾಗಿ ನಡೆದಿರ್ದವ್ಯಾಸ ದೂರ್ವಾಸರಂ
        ಪಂಚ ಮೇಡ್ರಾಸುರನು ಭಕ್ಷಿಸಲವರ ಮೊರೆ ಕೇಳ್ದು |
        ನೀ ಘೋರ ರೂಪಾಂತಂ ದೈತ್ಯನಂ ಸಂಹರಿಸಿ
        ಮುನಿ ಕುಲವ ಸಲಹಿದಾ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೨೨ ||\n

        ಶರಣು ವರ ಕಲಿ ವೀರೇಶ ಶರಣು ಶತರವಿತೇಜ
        ಶರಣು ಹರಿ ವಿಧಿ ವಂಧ್ಯ ಶರಣು ವಿಶ್ವಾಧಿಕ |
        ಶರಣು ಶಿವಗಣಾಧ್ಯಕ್ಷ ಶರಣು ಮಂಗಳಾಂಗ
        ಶರಣು ಶಿವಧೂತ ಶ್ರೀ ವೀರೇಶ ತವ ಸುಪ್ರಭಾತಂ || ೨೩ ||\n

        ನಮಸ್ತೆ ಶಿವರೂಪಯ ತ್ರಿಲೋಕ ವಂದ್ಯನೆ
        ನಮಸ್ತೆ ವೀರಮಣಿ ವೀರಗೋತ್ರಾಧಿಪನೆ |
        ನಮಸ್ತ ಸರ್ವ ಸಮನ್ವಯಾಚಾರ್ಯನೆ
        ನಮಸ್ತೆ ಜ್ಞಾನಗಮ್ಯಾಯ ಶ್ರೀಗುರು ವೀರೇಶನೆ || ೨೪ ||\n

        ನಮಸ್ತೆ ವೀರ ಕಾಸಿಯನುಟ್ಟ ವೀರಖಣೀಯೇ
        ನಮಸ್ತೆ ಮಹಾ ಮಾಯಾ ತಿಮಿರಭಾಸ್ಕರನೇ |
        ನಮಸ್ತೆ ಶಿವನಿಂದಕರ ಮೃತ್ಯು ದೇವತೆಯೇ
        ನಮಸ್ತೆ ಭವ-ಭಯ ವಿದೂರ ಶ್ರೀ ವೀರ ನಿಧಿಯೇ || ೨೫ ||\n

        ವೀರೇಶ ಎಲ್ಲೆಡೆಯು ನಾಸ್ತಿಕತೆ ಹಬ್ಬಿದುದು
        ಮತ್ತೆ ನೀನವತರಿಸಿ ವೀರ ಕಹಳೆಯನೂದಿ |
        ನುತಿಸಿರ್ಪ ಶಿವಾದ್ವೈತ ಸಿದ್ಧಾಂತವನ್ನುದ್ಧರಿಸಿ
        ಮಾನವ ಕೋಟಿಯ ಸಲುಹಲೇಳು ಶ್ರೀವೀರೇಶ ಪ್ರಭುವೇ || ೨೬ ||\n

        ರವಿ ಕೋಟಿ ತೇಜನೆ ಶಿವ ಲಾಂಛನ ಭೂಷಣನೇ
        ಸಚ್ಚಿದಾನಂದ ಸ್ವರೂಪನೆ ವರದೋಕ್ಷದಾಯಕನೆ |
        ಶಿವತತ್ವ ಚಿಂತಾಮಣಿಯೇ ತ್ರಿಜಗಪೂಜ್ಯನೆ
        ಮುನಿ ಕುಲ ವಂದ್ಯ ಭವನಾಶ ವೀರೇಶನೆ || ೨೭ ||\n

        ಸದ್ಗುರು ಶ್ರೀ ವೀರೇಶನಂಘ್ರಯಂ ಭಜಿಸುತ್ತ
        ಕುಂದ ಗೊರಳನ ಭಕ್ತ ಕಡು ನಿಷ್ಠೆಯಂ ರಚಿಸಿ |
        ಭಕ್ತಿ ಜ್ಞಾನ-ವಿರತಿಗಳ ಬಯಸಿ ಅರ್ಪಿಸಿಹರು
        ಸುಪ್ರಭಾತವನಿದನು ಚಂದ್ರಶೇಖರನು || ೨೮ ||\n

        ಮಂಗಲವು ರೇಣುಕಗೆ ಮಂಗಲವುದಾರುಕಗೆ ಮಂಗಲವು
        ಏಕೋರಾಮಗೆ ಮಂಗಲವು ಪಂಡಿತರಾಧ್ಯಗೆ |
        ಮಂಗಲವು ವಿಶ್ವಾರಾಧ್ಯನಿಗೆ ಮಂಗಲವು
        ಶ್ರೀ ವೀರೇಶನಿಗೆ ಶುಭ ಮಂಗಲವು || ೨೯ ||\n

        ಉದಯಾಸ್ತ ಕಾಲದೊಳು ಸುಪ್ರಭಾತವನಿದನು
        ದೃಢ ಭಕ್ತಿ ಭಾವದಿಂ ಬಿಡದೆ ಪಠಿಸಲ್ಕೆ |
        ಭಕ್ತಿ-ಮುಕ್ತಿಗಳನ್ನು ಸಂತಸದಿ ಕರುಣಿಪನು
        ಭಕ್ತವತ್ಸಲ ಗುರು ಶ್ರೀಗುರು ವೀರೇಶನು || ೩೦ ||\n

        ಮಂಗಲವು ನಿನಗೆ ಮಂಗಲವು ಗುರುವಿಗೆ
        ಮಂಗಲವು ವೀರನಿಗೆ ಮಂಗಲವು ಭದ್ರನಿಗೆ |
        ಮಂಗಲವು ಭದ್ರಾಣೆ ಭದ್ರ ಕಾಳೀಶಗೆ
        ಮಂಗಲವು ಮಾಯಾತಿಮಿರ ಭಾಸ್ಕರ ಶ್ರೀವೀರೇಶನಿಗೆ || ೩೧ ||\n

        ಮಂಗಲ ಲೋಕಪೂಜ್ಯಾಯ ಮೇದ ಸ್ತುತ್ಯಾಯ ಮಂಗಳಂ
        ಮಂಗಲಂ ರೌದ್ರರೂಪಾಯ ಶೈವ್ಯ ತೇಜಾಯ ಮಂಗಳಂ |
        ಶುಭವರದ ಹಸ್ತಾಯ ಸತ್ಯ ರೂಪಾಯ ಮಂಗಳಂ
        ಮಂಗಳಂ ನಿರ್ವಿಕಲ್ಪಾಯ ಭವ್ಯರೂಪಾಯ ಮಂಗಳಂ || ೩೨ ||\n

        ಮಂಗಲಂ ಗುರು ರೂಪಾಯ ಸರ್ವವಂದ್ಯಾಯ ಮಂಗಲಂ
        ಮಂಗಲಂ ಅಗ್ನಿನೇತ್ರಾಯ ಜ್ಞಾನಗಮ್ಯಾಯ ಮಂಗಲಂ |
        ಮಂಗಲಂ ತತ್ವವೇತ್ತಾಯ ವೈರಾಗ್ಯ ನಿಧಿಯೇತಥಾಃ
        ಮಂಗಲಂ ದೇವ ದೇವಾಯ ಶ್ರೀ ವೀರೇಶಾಯ ಮಂಗಲಂ || ೩೩ ||
    </string>
    <string name="kavacham">ಶ್ರೀವೀರಭದ್ರ ಕವಚಮ್ \n\n

        ಓಂ ಅಸ್ಯ ಶ್ರೀ ವೀರಭದ್ರ ಕವಚ ಮಹಾಮಂತ್ರಸ್ಯ ಪಶುಪತಿ ಋಷಿಃ ಅನುಷ್ಟುಪ್ ಛಂದಃ ಶ್ರೀ ಭದ್ರಕಾಳೀ ಸಮೇತ ವೀರಭದ್ರೋ
        ದೇವತಾ ಹ್ರಾಂ ಬೀಜಂ ಹ್ರೀಂ ಶಕ್ತಿಃ ಕ್ಲೀಂ ಕೀಲಕಮ್ ಶ್ರೀ ಭದ್ರಕಾಳೀ ಸಮೇತ ವೀರಭದ್ರೇಶ್ವರ ಪ್ರಸಾದ
        ಸಿದ್ಧ್ಯರ್ಥೇ
        ಜಪೇ ವಿನಿಯೋಗಃ ||

        ಧ್ಯಾನಮ್ |

        ರುದ್ರಂ ರೌದ್ರಾವತಾರಂ ಹುತವಹುನಯನಂ ಚೋರ್ಧ್ವಕೇಶಂ ಸುದಂಷ್ಟ್ರಂ |
        ವ್ಯೋಮಾಂಗಂ ಭೀಮರೂಪಂ ಕಿಣಿಕಿಣಿರಭಸ ಜ್ವಾಲಮಾಲಾsವೃತಾಂಗಮ್ |
        ಭೂತ ಪ್ರೇತಾದಿನಾಥಂ ಕರಕಮಲಯುಗೇ ಖಡ್ಗ ಪಾತ್ರೆ ವಹಂತಮ್ |
        ವಂದೇ ಲೋಕೈಕವೀರಂ ತ್ರಿಭುವನವಿನುತಂ ಶ್ಯಾಮಲಂ ವೀರಭದ್ರಮ್ ||

        ಶ್ಲೋಕಃ |

        ಓಂ ಲಲಾಟಂ ವೀರಭದ್ರೋsವ್ಯಾಚ್ಚಕ್ಷುಷೀ ಚೋರ್ಧ್ವಕೇತಭೃತ್ |
        ಭೂಮಧ್ಯಂ ಭೂತನಾಥೋವ್ಯಾನ್ನಾಸಿಕಾಂ ವೀರವಿಗ್ರಹಃ ||

        ಕಪಾಲೀ ಕರ್ಣಯುಗಲಂ ಕಂಧರಂ ನೀಲಕಂಧರಃ |
        ವದನಂ ಭದ್ರಕಾಳೀಶೋ ಚುಬುಕಂ ಚಂದ್ರಖಂಡಭೃತ್ ||

        ಕರೌ ಪಾಶಕರಃ ಪಾತು ಬಾಹೂ ಪಾತು ಮಹೇಶ್ವರಃ |
        ಊರುಸ್ಥಲಂ ಚೋಗ್ರದಂಷ್ಟ್ರಂ ಆನಂದಾತ್ಮಾ ಹೃದಂಬುಜಮ್ ||

        ರುದ್ರಮೂರ್ತಿರ್ನಾಭಿಮಧ್ಯಂ ಕಟಿಂ ಮೇ ಪಾತು ಶೂಲಭೃತ್ |
        ಮೂರ್ಧಾನಂ ಪಂಚಮೂರ್ಧಾಽವ್ಯಾತ್ ನಿಟಿಲಂ ನಿರ್ಮಲೇಂದುಭೃತ್ ॥

        ಕಪೋಲಯುಗ್ಮಂ ಕಾಪಾಲೀ ಜಿಹ್ವಾಂ ಮೇ ಜೀವನಾಯಕಃ |
        ಪಾರ್ಶ್ವಯುಗ್ಮಂ ಶಕ್ತಿಹಸ್ತೋ ಸರ್ವಾಂಗಂ ದೇವವಲ್ಲಭಃ ॥

        ಸರ್ವಕಾರ್ಯೇಷು ಮಾಂ ಪಾಯಾತ್ ಭದ್ರಕಾಳೀ ಮನೋಹರಃ |
        ಬ್ರಹ್ಮರಾಕ್ಷಸ ಪೈಶಾಚ ಬೇತಾಳ ರಣಭೂಮಿಷು ॥

        ಸರ್ವೇಶ್ವರಃ ಸದಾಪಾತು ಸರ್ವದೇವಮದಾಪಹಃ |
        ಶೀತೋಷ್ಣಯೋಶ್ಚಾಂಧಕಾರೇ ನಿಮ್ನೋನ್ನತಭುವಿಸ್ಥಲೇ ||

        ಕಂಟಕೇಽಪ್ವಪಿ ದುರ್ಗೇಷು ಪರ್ವತೇsಪಿ ಚ ದುರ್ಗಮೇ |
        ಶಸ್ತ್ರಾಸ್ತ್ರಮುಖ ಭಲ್ಲೂಕ ವ್ಯಾಘ್ರಚೋರಭಯೇಷು ಚ ||

        ರಾಜಾದ್ಯುಪದ್ರವೇಚೈವ ಪಾಯಾಚ್ಛರಭರೂಪಧೃತ್ |
        ಯ ಏತದ್ವೀರಭದ್ರಸ್ಯ ಕವಚಂ ಪಠತೇನ್ನರಃ |
        ಸೋsಪಮೃತ್ಯುಭಯಂ ಮುಕ್ತ್ವಾ ಸುಖಂ ಪ್ರಾಪ್ನೋತಿ ನಿಶ್ಚಯಮ್ ||

        ಮೋಕ್ಷಾರ್ಥೀ ಮೋಕ್ಷಮಾಪ್ನೋತಿ ಧನಾರ್ಥೀ ಲಭತೇ ಧನಮ್ |
        ವಿದ್ಯಾರ್ಥಿ ಲಭತೇ ವಿದ್ಯಾಂ ಜಯಾರ್ಥೀ ಜಯಮಾಪ್ನುಯಾತ್ ||

        ದೇಹಾಂತೇ ಶಿವಸಾಯುಜ್ಯಮ್ ಅವಾಪ್ನೋತಿ ನ ಸಂಶಯಂ |
        ಏತತ್ಕವಚಮೀಶಾನಿ ನ ಚೇಯಂ ದೇಯಂ ಯಸ್ಯ ಕಸ್ಯ ಚಿತ್ ॥

        ಸುಕುಲೀನಾಯ ಶಾಂತಾಯ ಶಿವಭಕ್ತೀ ರತಾಯ ಚ |
        ಶಿಷ್ಯಾಯ ಗುರುಭಕ್ತಾಯ ದಾತವ್ಯಂ ಪರಮೇಶ್ವರೀ ||

        ತವಸ್ನೇಹಾನ್ಮಯಾ ಪ್ರೋಕ್ತಮ್ ಏತತ್ತೇ ಕವಚಂ ಮಹತ್ |
        ಗೋಪನೀಯಂ ಪ್ರಯತ್ನೇನ ತ್ವಯೈವಂ ಕುಲಸುಂದರೀ ||

        ಇತಿ ಆಕಾಶಭೈರವಕಲ್ಪೇ ಶ್ರೀ ವೀರಭದ್ರ ಕವಚಂ ನಾಮ ಚತ್ವಾರಿಂಶತ್ ಪಟಲಃ
    </string>
    <string name="bhadra_kavacha">ವೀರಾಗಮದಲ್ಲಿನ ಭದ್ರಕವಚ \n\n
        ರೋಗಘ್ನಂ ರೋಗಿಣಾಂ ಲೋಕೇ ಯೋಗಿನಾಂ ಮೋಕ್ಷದಾಯಕಂ
        ಭಕ್ತಾನಾಂ ಭಕ್ತನಿಲಯಂ ಚತುರ್ವರ್ಗ ಪ್ರದಾಯಕಂ |
        ವಿರಕ್ತಾನಾಂ ವಿರಾಮತ್ವಂ ನೃಪಾಣಾಂ ಜಯವರ್ಧನಂ |
        ವ್ರತಿನಾಂ ವ್ರತದಂ ಶುದ್ಧಂ ಭೂತಪ್ರೇತ ವಿನಾಶನಂ ।...
        ಪ್ರಮಥಾನಾಂ ಸಮಾಜೇಷು ಮಂತ್ರಬೀಜಾಕ್ಷರಾನ್ವಿತಂ |
        ವೇದಾವಾಸಂ ಸ್ವರಮಯಂ ಜನ್ಮಸಂಸಾರ ವರ್ಜಿತಂ |
        ವೀರಮಾಹೇಶ್ವರಾಣಾಂಚ ದೀಕ್ಷಾಕಾಲೇ ಮಮಪ್ರಿಯೇ |
        ಯೇ ಪಠಂತಿ ಮಮಪ್ರೀತ್ಯಾ ತೇ ಯಾಂತಿ ಮಮಮಂದಿರಂ |
        ಕವಚಂ ನ್ಯಾಸಯೇದ್ಯಸ್ತು ದೀಕ್ಷಾಕಾಲೇ ದಿನೇ ದಿನೇ
        ತಸ್ಯದೀಕ್ಷಾಫಲಂ ಪ್ರಾಪ್ತಂ ಸರ್ವಾಗಮಸಮನ್ವಿತಂ |
        ಕವಚಂ ಮಂತ್ರರಾಜಾನಂ ಪಾಠಯೇತ್ತತ್ತ್ವ ಪಾರಗಃ |
        ಸ ಯಾತಿ ಮಮಸಾಯುಜ್ಯಂ ಸತ್ಯಂ ವದಾಮ್ಯಹಂ !
        ತಸ್ಯ ಪ್ರಭಾವಾತ್ಸರ್ವೇ ತೇ ತೃಣೀಕೃತ ಪುರಂದರಾ:
        ವೀರಮಾಹೇಶ್ವರಾಃ ಸರ್ವೇ ವ್ರತಂ ದಧತಿ ಹೇ ಪ್ರಿಯೇ |

        ವೇದಶಾಸ್ತ್ರ ಪುರಾಣಾನಿ ತ್ಯಾಕ್ತ್ವಾ ತಂ ಮಂತ್ರನಾಯಕಂ
        ಯಃ ಪಠೇದಾಶು ಮೇ ಪ್ರೀತ್ಯಾ ಸಾಯುಜ್ಯಂ ಲಭತೇಪ್ರೀಯೇ
        ಪ್ರಾಣಲಿಂಗಸ್ಯ ಸಾನ್ನಿಧ್ಯೇ ಪಠಯೇತ್ತತ್ತ್ವ ಪಾರಗಃ
        ಸಯಾತಿ ಮಮ ಸಾಯುಜ್ಯಂ ರುದ್ರಗಂಧರ್ವ ಸೇವಿತಂ |
        ಪಾದೋದಕ ಕ್ರಿಯಾಕಾಲೇ ವೀರಾಗಮ ಸಮನ್ವಿತಂ
        ಕವಚಂ ವೇದ ವೇದಾಂಗ ವೇದಮೂರ್ಧ್ನಿ ಪ್ರತಿಷ್ಠಿತಂ |
        ಯೇ ಸ್ಮರಂತಿ ಮಮ ಪ್ರೀತ್ಯಾ ತ ಏತೇ ಪ್ರಥಮೋತ್ತಮಾಃ ||
    </string>
    <string name="Sri_veerabhadra_dhandakam">ಶ್ರೀ ವೀರಭದ್ರ ದಂಡಕಂ \n\n

        ಶ್ರೀ ಭದ್ರ । ಭದ್ರಾಮ್ಬಿಕಾಪ್ರಾಣನಾಥಾ । ಸುರಾರಾತಿಭಂಗಾ । ಪ್ರಭೋ ।
        ರುದ್ರ । ರೌದ್ರಾವತಾರಾ । ಸುನಾಸೀರ ಮುಖ್ಯಾಮರಾನೇಕ ಸಮ್ಭಾವಿತಾನಲ್ಪ
        ಸುಶ್ಲೋಕಚಾರಿತ್ರ । ಕೋಟ್ಯರ್ಕಸಂಕಾಶ ದೇದೀಪ್ಯಮಾನಪ್ರಭಾ । ದಿವ್ಯಗಾತ್ರಾ
        ಶಿವಾ । ಪಾಲಿತಾಶೇಷಬ್ರಹ್ಮಾಂಡಭಾಂಡೋದರಾ । ಮೇರುಧೀರಾ । ವಿರಾಡ್ರೂಪ ।
        ವಾರಾಶಿಗಮ್ಭೀರ । ಸೌಜನ್ಯರತ್ನಾಕರಾ । ವಾರಿದಶ್ಯಾಮ । ನಾರಾಯಣಧ್ಯೇಯ
        ಮೌನೀನ್ದ್ರಚಿತ್ತಾಬ್ಜಭೃಂಗಾ । ಸುರಾರಾತಿಭಂಗಾ । ಮಹೋದಾರ ।
        ಭಕ್ತೌಘಕಲ್ಪದ್ರುಮಾ । ಶಿಷ್ಟರಕ್ಷಾ । ಪ್ರಶಸ್ತಪ್ರತಾಪೋಜ್ಜ್ವಲಾ ।
        ಶ್ರೀಕರಾ । ಭೀಕರಾ । ಭೀಕರಾಲೋಕ । ಚೂರ್ಣೀಕೃತಾರ್ಯೇಷು ದೋರ್ದಂಡ ಪಾಂಡಿತ್ಯ
        ಸಂರಮ್ಭಣೋಲ್ಲಾಸ । ರಾಜತ್ಕರಾಮ್ಭೋಜ ವಿನ್ಯಸ್ತ ಖಡ್ಗತ್ರಿಶೂಲಾದಿನಾನಾಯುಧಾ ।
        ಭಂಡನಾಚಾರ್ಯ । ರುದ್ರಾಕ್ಷಮಾಲಾಲಸದ್ದೇಹ । ರತ್ನಾಂಚಿತಾನರ್ಘ ಸೌವರ್ಣ
        ಕೇಯೂರ ಭಾಸ್ವತ್ ಕಿರೀಟೋತ್ತಮಾಂಗಾ । ತ್ರಿಪುಂಡ್ರಾಂಕ ಸರ್ವಾಂಗಸಂಶೋಭಿತಾ
        ಚನ್ದ್ರಕೋಟೀರ । ಹೇಮಾಮ್ಬರಾಡಮ್ಬರಾ । ದೈವಚೂಡಾಮಣೀ । ಸನ್ತತಾಖಂಡ ।
        ದೀರ್ಘಾಯುರಾರೋಗ್ಯಸೌಭಾಗ್ಯಸಿದ್ಧಿಪ್ರದಾ । ದೇವ । ತಾಪತ್ರಯಧ್ವಾನ್ತಭಾನೂ ।
        ವಿಯತ್ಕೇಶ । ಮೃತ್ಯುಂಜಯಾ । ದೀನಚಿನ್ತಾಮಣೀ । ಸರ್ವಲೋಕೇಶ । ಲೋಕಾತ್ಮ ।
        ಲೋಕಸ್ವರೂಪಾ । ಮಹಾಯಜ್ಞವಿಧ್ವಂಸನಾಧ್ಯಕ್ಷ । ದಾಕ್ಷಾಯಣೀಪುತ್ರ ।
        ಅಕ್ಷೀಣಪುಣ್ಯಾ । ವಿಭೋ । ವೀರಭದ್ರಾ । ಮಹಾಕಾಲರುದ್ರಾ । ಕೃಪಾಮುದ್ರ ।
        ಮಾಂ ಪಾಹಿ ದೀನಬನ್ಧೋ । ದಯಾವಾರಿರಾಶೀ । ಲಸಚ್ಚಿತ್ರಭೂಷಾ ।
        ಮಹಾದಿವ್ಯವೇಷಾ । ಹರಾ । ಭಕ್ತಪೋಷಾ । ದಯಾವಾರ್ಥಿ । ವೀರೇಶ್ವರಾ ।
        ನಿತ್ಯಕಲ್ಯಾಣಸನ್ಧಾನಧೌರೇಯ । ಪಾಪಾಟವೀ ಕೀಲ ದಾವಾನಲಾ ।
        ಪುಣ್ಯಮೂರ್ತೇ । ನಮಸ್ತೇ ನಮಸ್ತೇ ನಮಸ್ತೇ ನಮಃ ॥

        || ಇತಿ ಶ್ರೀವೀರಭದ್ರದಂಡಕಂ ಸಮ್ಪೂರ್ಣಮ್ ||
    </string>
    <string name="action_settings">ಅಪ್ಲಿಕೇಶನ್ ಬಗ್ಗೆ</string>
    <string name="shareApp">ಅಪ್ಲಿಕೇಶನ್ ಹಂಚಿಕೊಳ್ಳಿ</string>
    <string name="themeMenu">ಥೀಮ್</string>
    <string name="key_list_preference">prefs_key_text_size</string>
    <string name="app_text_bold">prefs_app_text_bold</string>
    <string name="make_text_bold">ಅಪ್ಲಿಕೇಶನ್ ಅಕ್ಷರಗಳನ್ನು ದಪ್ಪವಾಗಿಸಿ</string>
    <string name="color_button">keybuttoncolor</string>
    <string name="select_theme_summary">ಹಿನ್ನೆಲೆ ಬಣ್ಣವನ್ನು ಆರಿಸಿ</string>
    <string name="select_theme_title">ಥೀಮ್ ಆಯ್ಕೆಮಾಡಿ</string>
    <string name="prefs_color_theme">prefs_color_theme</string>
</resources>