<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="General">
        <ListPreference
            android:dialogTitle="Select duration"
            android:entries="@array/settings_list_preference_titles"
            android:entryValues="@array/settings_list_preference_values"
            android:key="@string/key_list_preference"
            android:summary="Click to show a list to choose from"
            android:title="List Preference" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/app_text_bold"
            android:summary="@string/make_text_bold"
            android:title="@string/make_text_bold" />

        <Preference
            android:key="@string/color_button"
            android:summary="your app theme will be selected"
            android:title="select theme" />

        <!--below switch preferences is use to restrict mode-->
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_color_theme"
            android:summary="@string/select_theme_summary"
            android:title="@string/select_theme_title" />

    </PreferenceCategory>

</PreferenceScreen>
