<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arka.veerabhadreshwaramantra.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/shareApp"
        android:title="@string/shareApp"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/rateUs"
        android:title="@string/rateUs"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/themeMenu"
        android:title="@string/themeMenu"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>